Cleanups and update. Added info about pro version

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -6,11 +6,13 @@
 # You just need to translate the english text behind the =
 # Then remove the ## in front of the line.
 #
+# Pro version translations start with the prefix 'pro.'
+#
 # There is also a guide on our offical webpage under
 # http://www.powerfolder.com/node/i18n
 #
 # When you are completed please send your translation file to
-# contact@powerfolder.com
+# translation@powerfolder.com
 #
 # Thank you,
 # Your PowerFolder Team
@@ -56,9 +58,9 @@ about.dialog_contributers_tab=team
 about.key=h
 about.name=Hilfe
 
-##aboutwebservice.description=Opens the WebService of the webservice in default browser
+##aboutwebservice.description=Opens the Online Storage in default browser
 ##aboutwebservice.key=A
-##aboutwebservice.name=About WebService
+##aboutwebservice.name=About Online Storage
 
 addfriend.description=F\u00fcgt einen Nutzer zur Freundesliste hinzu
 addfriend.key=f
@@ -77,6 +79,7 @@ buypro.name=Pro kaufen
 
 ##chat.notification.option1=Answer
 ##chat.notification.option2=Close
+##chat.notification.subtitle=<html><center><b>PowerFolder</b></center>You received a new chat message</html>
 
 chatpanel.cannot_deliver=Die Nachricht konnte nicht zugestellt werden, da '{0}' nicht verbunden ist\!
 chatpanel.chat_with=Chat mit
@@ -471,7 +474,7 @@ member.non_mutual_friend=Keine gegenseitige Freundschaft
 member.onlan=Im Lan
 member.supernode=Supernode
 
-##mirrorfolder.description=Setup the WebService to backup a folder
+##mirrorfolder.description=Setup the Online Storage to backup a folder
 ##mirrorfolder.key=B
 ##mirrorfolder.name=Backup Folder
 
@@ -553,7 +556,7 @@ openfile.description=\u00d6ffnet die angew\u00e4hlte Datei
 openfile.key=\u00f6
 openfile.name=Datei \u00f6ffnen
 
-##openwebservice.description=Opens the WebService in the default browser
+##openwebservice.description=Opens the Online Storage in the default browser
 ##openwebservice.key=B
 ##openwebservice.name=Open in Browser
 
@@ -587,6 +590,7 @@ preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folde
 ##preferences.dialog.dialogs.check_for_program_updates=Check for PowerFolder program updates
 preferences.dialog.dialogs.title=Dialoge
 preferences.dialog.dialogs.warnoncloseifnotinsync=Beim Schliessen warnen, wenn die Synchronisation noch nicht abgeschlossen ist
+##preferences.dialog.dialogs.warnondownloadtransferproblems=Warn on download transfer problems
 preferences.dialog.dialogs.warnonlimitedconnectivity=Warnung eingeschr\u00e4nkter Konnektivit\u00e4t 
 preferences.dialog.dialogs.warnonpossiblefilenameproblems=Warnung bei m\u00f6glichen Problem mit Dateinamen
 preferences.dialog.dyndns=Meine (dynamische) Adresse
@@ -652,7 +656,7 @@ preferences.dialog.titleProcessing=Arbeite...
 ##preferences.dialog.userecyclebin=Use recycle bin (default)
 preferences.dialog.useziponlan=ZIP Kompression im LAN verwenden 
 preferences.dialog.useziponlan.tooltip=Nutzen Sie die Einstellung, wenn die ZIP Kompression im bei LAN \u00dcbertragungen aktiviert werden soll.
-##preferences.dialog.verbose=Enable verbose logging
+##preferences.dialog.verbose=Enable debug logging
 preferences.dialog.warnningMessage=Warnung
 preferences.dialog.xbehavior=Beim Schlie\u00dfen von PowerFolder
 preferences.dialog.xbehavior.exit=Programm beenden
@@ -664,6 +668,14 @@ previewfiles.description=Dateivorschau f\u00fcr diesen Folder
 previewfiles.key=V
 previewfiles.name=Vorschau
 
+##pro.http.options.directconnect=Direct connection to the internet
+##pro.http.options.host=Hostname
+##pro.http.options.httpproxy=HTTP-Proxy
+##pro.http.options.password=Password
+##pro.http.options.port=Port
+##pro.http.options.title=HTTP Connection settings
+##pro.http.options.username=Username
+##pro.http.options.withauth=With authorization
 pro.security.autoacceptfriendkeys=Ersten \u00f6ffentlichen Schl\u00fcssel eines Freudes automatisch akzeptieren.
 pro.security.high=Hoch
 pro.security.high_info=Hoche Sicherheit (Standart)\:
@@ -717,11 +729,11 @@ quickinfo.user.isconnectedinet=ist im Internet
 quickinfo.user.isconnectedlan=ist im LAN
 quickinfo.user.isdiconnected=ist nicht verbunden
 quickinfo.user.secureconnected=Die Verbindung ist sicher
-##quickinfo.webservice.connected=Connected to the PowerFolder WebService
+##quickinfo.webservice.connected=Connected to the PowerFolder Online Storage
 ##quickinfo.webservice.foldersmirrored={0} of {1} Folder(s) get backed up
-##quickinfo.webservice.notconnected=Disconnected from PowerFolder WebService
-##quickinfo.webservice.notsetup=PowerFolder WebService not configured yet
-##quickinfo.webservice.title=Online Storage - WebService
+##quickinfo.webservice.notconnected=Disconnected from PowerFolder Online Storage
+##quickinfo.webservice.notsetup=Online Storage not configured yet
+##quickinfo.webservice.title=PowerFolder Online Storage
 
 reconnect.description=Baut eine neue Verbindung zu dem Benutzer auf
 reconnect.key=r
@@ -839,6 +851,12 @@ syncprofile.manualdownload.name=Manueller Download
 syncprofile.projectwork.name=Projektarbeit
 ##syncprofile.syncpcs.name=Mirror
 
+##systemservice.options.info1=Use these options install/uninstall
+##systemservice.options.info2=PowerFolder as system service.
+##systemservice.options.install=Install
+##systemservice.options.title=PowerFolder System Service
+##systemservice.options.uninstall=Uninstall
+
 systray.exit=Beenden
 systray.hide=Verstecken
 systray.powerfolder=PowerFolder v{0}
@@ -857,6 +875,22 @@ title.my.folders=Meine Folder
 title.public.folder=\u00d6ffentlicher Folder
 title.public.folders=\u00d6ffentliche Folder
 title.search.users=Benutzer suchen
+
+##transfer.problem.broken.download=The transfer download was broken for {0}
+##transfer.problem.broken.upload=\=The transfer upload was broken for {0}
+##transfer.problem.file.not.found.exception=There was a FileNotFoundException for {0}\: {1}
+##transfer.problem.general.exception=There was an Exception for {0}\: {1}
+##transfer.problem.illegal.chunk=Received illegal chunk for {0}\: {1}
+##transfer.problem.invalid.part=Received invalid part request {0}
+##transfer.problem.io.exception=Unable to read/write {0}\: {1}
+##transfer.problem.md5.error=There was an MD5-Hash error for {0}
+##transfer.problem.no.such.algorithm.exception=There was a NoSuchAlgorithmException for {0}\: {1}
+##transfer.problem.old.upload=Already received download request for {0} from {1}
+##transfer.problem.temp.file.delete=Unable to removed broken tempfile for {0} {1}
+##transfer.problem.temp.file.open=Unable to create/open tempfile for {0} {1}
+##transfer.problem.temp.file.write=Unable to write to tempfile for {0} {1}
+##transfer.problem.title=File Transfer Problem
+##transfer.problem.transfer.exception=There was a TransferException for {0}\: {1}
 
 transfers.completed=vollst\u00e4ndig
 transfers.eta=verbleibend
@@ -941,11 +975,11 @@ wizard.syncpcspanel.selecttarget=Bitte w\u00e4hlen Sie nun das lokale Verzeichni
 ##wizard.syncpcspanel.setup=Setup a new mirror
 ##wizard.syncpcspanel.takepart=Take part in a mirror
 ##wizard.syncpcspanel.title=Mirror
-##wizard.webservice.enteraccount=Please enter your account data to login to the WebService
+##wizard.webservice.enteraccount=Please enter your account data to login to the Online Storage
 ##wizard.webservice.learnmore=What is the PowerFolder WebService?
 ##wizard.webservice.login=Online Storage Login
-##wizard.webservice.mirrorchoosefolder=Choose a folder to be backed up by the PowerFolder WebService
-##wizard.webservice.mirrorsetup=Backup Folder by WebService
+##wizard.webservice.mirrorchoosefolder=Choose a folder to be backed up by the PowerFolder Online Storage
+##wizard.webservice.mirrorsetup=Backup Folder by Online Storage
 ##wizard.webservice.password=Password
 ##wizard.webservice.register=Register new Account
 ##wizard.webservice.username=Email
