--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -6,11 +6,13 @@
 # You just need to translate the english text behind the =
 # Then remove the ## in front of the line.
 #
+# Pro version translations start with the prefix 'pro.'
+#
 # There is also a guide on our offical webpage under
 # http://www.powerfolder.com/node/i18n
 #
 # When you are completed please send your translation file to
-# contact@powerfolder.com
+# translation@powerfolder.com
 #
 # Thank you,
 # Your PowerFolder Team
@@ -56,9 +58,9 @@ about.dialog_contributers_tab=equipo
 about.key=h
 about.name=Ayuda
 
-##aboutwebservice.description=Opens the WebService of the webservice in default browser
+##aboutwebservice.description=Opens the Online Storage in default browser
 ##aboutwebservice.key=A
-##aboutwebservice.name=About WebService
+##aboutwebservice.name=About Online Storage
 
 addfriend.description=A\u00f1adir usuario a la lista de amigos
 addfriend.key=f
@@ -77,6 +79,7 @@ addressEditor.title=Rango-IP
 
 ##chat.notification.option1=Answer
 ##chat.notification.option2=Close
+##chat.notification.subtitle=<html><center><b>PowerFolder</b></center>You received a new chat message</html>
 
 chatpanel.cannot_deliver=el mensaje no se pudo entregar porque '{0}' no est\u00e1 conectado
 chatpanel.chat_with=Charlar con
@@ -471,7 +474,7 @@ member.non_mutual_friend=Amigo no mutuo
 member.onlan=En LAN
 member.supernode=Supernodo
 
-##mirrorfolder.description=Setup the WebService to backup a folder
+##mirrorfolder.description=Setup the Online Storage to backup a folder
 ##mirrorfolder.key=B
 ##mirrorfolder.name=Backup Folder
 
@@ -534,8 +537,8 @@ onepublicfolderpanel.unable_to_connect_to_a_source=No se puede conectar con la f
 
 onlinelabel.connecting=Conectando
 onlinelabel.connecting.text=Est\u00e1 en l\u00ednea, pero conectado a pocos usuarios. Espere un poco para estar completamente conectado. Si no se llega a conectar, lea el FAQ en http\://www.powerfolder.com
-##onlinelabel.disabled=Disabled (Extensive use detected)
-##onlinelabel.disabled.text=PowerFolder is currently disabled because extensive use was detected.
+##onlinelabel.disabled=Disabled
+##onlinelabel.disabled.text=PowerFolder is currently disabled.
 onlinelabel.offline=Fuera de l\u00ednea
 onlinelabel.offline.text=Est\u00e1 fuera de l\u00ednea. No est\u00e1 conectado a otro usuario de la red PowerFolder
 onlinelabel.online=En l\u00ednea
@@ -553,7 +556,7 @@ openfile.description=Abrir (Ajecutar) el archivo seleccionado
 openfile.key=O
 openfile.name=Abrir archivo
 
-##openwebservice.description=Opens the WebService in the default browser
+##openwebservice.description=Opens the Online Storage in the default browser
 ##openwebservice.key=B
 ##openwebservice.name=Open in Browser
 
@@ -587,6 +590,7 @@ preferences.dialog.createdesktopshortcuts=Crear acceso directo en el Escritorio
 ##preferences.dialog.dialogs.check_for_program_updates=Check for PowerFolder program updates
 preferences.dialog.dialogs.title=Dialogos
 preferences.dialog.dialogs.warnoncloseifnotinsync=Advertir sobre el cierre del programa si una carpeta se esta sincronizando todavia
+##preferences.dialog.dialogs.warnondownloadtransferproblems=Warn on download transfer problems
 preferences.dialog.dialogs.warnonlimitedconnectivity=Avisar sobre conectividad limitada (Sin conexiones entrantes)
 preferences.dialog.dialogs.warnonpossiblefilenameproblems=Avisar sobre posibles problemas con nombres de archivo (p.ej. demasiado largos)
 preferences.dialog.dyndns=mi DNS (din\u00e1mica)
@@ -652,7 +656,7 @@ preferences.dialog.titleProcessing=procesando...
 ##preferences.dialog.userecyclebin=Use recycle bin (default)
 preferences.dialog.useziponlan=Usar Compresion Zip en LAN
 ##preferences.dialog.useziponlan.tooltip=Enable if files to transfer are easy to compress (this may effect your CPU load)
-##preferences.dialog.verbose=Enable verbose logging
+##preferences.dialog.verbose=Enable debug logging
 preferences.dialog.warnningMessage=Advertencia
 preferences.dialog.xbehavior=Acci\u00f3n al cerrar
 preferences.dialog.xbehavior.exit=Salir del programa
@@ -664,6 +668,14 @@ previewfiles.description=Previsualizar los archivos de esta carpeta
 previewfiles.key=P
 previewfiles.name=Previsualizar
 
+##pro.http.options.directconnect=Direct connection to the internet
+##pro.http.options.host=Hostname
+##pro.http.options.httpproxy=HTTP-Proxy
+##pro.http.options.password=Password
+##pro.http.options.port=Port
+##pro.http.options.title=HTTP Connection settings
+##pro.http.options.username=Username
+##pro.http.options.withauth=With authorization
 ##pro.security.autoacceptfriendkeys=Automatically accept first time public keys from friends
 pro.security.high=Alta
 pro.security.high_info=Seguridad Alta (default)\:
@@ -717,11 +729,11 @@ quickinfo.user.isconnectedinet=Esta en Internet
 quickinfo.user.isconnectedlan=Esta en Red Local
 quickinfo.user.isdiconnected=Esta desconectado
 quickinfo.user.secureconnected=conectado de forma segura
-##quickinfo.webservice.connected=Connected to the PowerFolder WebService
+##quickinfo.webservice.connected=Connected to the PowerFolder Online Storage
 ##quickinfo.webservice.foldersmirrored={0} of {1} Folder(s) get backed up
-##quickinfo.webservice.notconnected=Disconnected from PowerFolder WebService
-##quickinfo.webservice.notsetup=PowerFolder WebService not configured yet
-##quickinfo.webservice.title=Online Storage - WebService
+##quickinfo.webservice.notconnected=Disconnected from PowerFolder Online Storage
+##quickinfo.webservice.notsetup=Online Storage not configured yet
+##quickinfo.webservice.title=PowerFolder Online Storage
 
 reconnect.description=Reconectarse a este usuario ahora
 reconnect.key=r
@@ -839,6 +851,12 @@ syncprofile.manualdownload.name=Descarga manual
 syncprofile.projectwork.name=Proyecto
 ##syncprofile.syncpcs.name=Mirror
 
+##systemservice.options.info1=Use these options install/uninstall
+##systemservice.options.info2=PowerFolder as system service.
+##systemservice.options.install=Install
+##systemservice.options.title=PowerFolder System Service
+##systemservice.options.uninstall=Uninstall
+
 systray.exit=Salir
 systray.hide=Ocultar
 systray.powerfolder=PowerFolder v{0}
@@ -857,6 +875,22 @@ title.network.statistics=Estad\u00edsticas de la Red
 title.public.folder=Carpeta p\u00fablica
 title.public.folders=Carpetas p\u00fablicas
 title.search.users=Buscar usuarios
+
+##transfer.problem.broken.download=The transfer download was broken for {0}
+##transfer.problem.broken.upload=\=The transfer upload was broken for {0}
+##transfer.problem.file.not.found.exception=There was a FileNotFoundException for {0}\: {1}
+##transfer.problem.general.exception=There was an Exception for {0}\: {1}
+##transfer.problem.illegal.chunk=Received illegal chunk for {0}\: {1}
+##transfer.problem.invalid.part=Received invalid part request {0}
+##transfer.problem.io.exception=Unable to read/write {0}\: {1}
+##transfer.problem.md5.error=There was an MD5-Hash error for {0}
+##transfer.problem.no.such.algorithm.exception=There was a NoSuchAlgorithmException for {0}\: {1}
+##transfer.problem.old.upload=Already received download request for {0} from {1}
+##transfer.problem.temp.file.delete=Unable to removed broken tempfile for {0} {1}
+##transfer.problem.temp.file.open=Unable to create/open tempfile for {0} {1}
+##transfer.problem.temp.file.write=Unable to write to tempfile for {0} {1}
+##transfer.problem.title=File Transfer Problem
+##transfer.problem.transfer.exception=There was a TransferException for {0}\: {1}
 
 transfers.completed=terminados
 ##transfers.eta=ETA
@@ -941,11 +975,11 @@ wizard.syncpcspanel.selecttarget=Por favor, seleccione el direcctorio local
 ##wizard.syncpcspanel.setup=Setup a new mirror
 ##wizard.syncpcspanel.takepart=Take part in a mirror
 ##wizard.syncpcspanel.title=Mirror
-##wizard.webservice.enteraccount=Please enter your account data to login to the WebService
+##wizard.webservice.enteraccount=Please enter your account data to login to the Online Storage
 ##wizard.webservice.learnmore=What is the PowerFolder WebService?
 ##wizard.webservice.login=Online Storage Login
-##wizard.webservice.mirrorchoosefolder=Choose a folder to be backed up by the PowerFolder WebService
-##wizard.webservice.mirrorsetup=Backup Folder by WebService
+##wizard.webservice.mirrorchoosefolder=Choose a folder to be backed up by the PowerFolder Online Storage
+##wizard.webservice.mirrorsetup=Backup Folder by Online Storage
 ##wizard.webservice.password=Password
 ##wizard.webservice.register=Register new Account
 ##wizard.webservice.username=Email
