--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -6,11 +6,13 @@
 # You just need to translate the english text behind the =
 # Then remove the ## in front of the line.
 #
+# Pro version translations start with the prefix 'pro.'
+#
 # There is also a guide on our offical webpage under
 # http://www.powerfolder.com/node/i18n
 #
 # When you are completed please send your translation file to
-# contact@powerfolder.com
+# translation@powerfolder.com
 #
 # Thank you,
 # Your PowerFolder Team
@@ -77,6 +79,7 @@ buypro.name=Version Pro
 
 chat.notification.option1=R\u00e9pondre
 chat.notification.option2=Fermer
+##chat.notification.subtitle=<html><center><b>PowerFolder</b></center>You received a new chat message</html>
 
 chatpanel.cannot_deliver=Le message ne peut pas \u00eatre d\u00e9livr\u00e9 car '{0}' n'est pas connect\u00e9
 chatpanel.chat_with=Discuter avec
@@ -224,7 +227,7 @@ filenameproblem.dialog.never_ask_this_again=Ne plus me demander
 filenameproblem.dialog.solution=Solution
 filenameproblem.dialog.title=Probl\u00e8me(s) de fichier d\u00e9tect\u00e9
 filenameproblem.duplicate=Dupliquer le fichier trouv\u00e9 (en modifiant la casse)
-filenameproblem.duplicate.description=Un fichier de même nom a \u00e9t\u00e9 trouv\u00e9 mais avec une casse diff\u00e9rente\:\n{0}\nce qui cause un probl\u00e8me avec Windows
+filenameproblem.duplicate.description=Un fichier de m\u00c3\u00aame nom a \u00e9t\u00e9 trouv\u00e9 mais avec une casse diff\u00e9rente\:\n{0}\nce qui cause un probl\u00e8me avec Windows
 filenameproblem.ends_with_illegal_char=Le nom de fichier se termine avec des caract\u00e8res non recommand\u00e9s
 filenameproblem.ends_with_illegal_char.description=Le nom de fichier se termine avec des caract\u00e8res causant probl\u00e8me avec Windows.\nles caract\u00e8res . et espace ( ) n'y sont pas autoris\u00e9s en derni\u00e8re position
 filenameproblem.not_recommended_chars=Le nom de fichier contient des caract\u00e8res non recommand\u00e9s
@@ -307,7 +310,7 @@ folderpanel.filestab.dropfile_duplicate_dialog.title=Fichier existant
 folderpanel.hometab.choose_local_folder.title=Choisir le dossier source
 folderpanel.hometab.confirm_local_folder_move.text=D\u00e9placer le dossier source de\n{0}\nvers\n{1}?
 folderpanel.hometab.confirm_local_folder_move.title=D\u00e9placer le dossier source
-folderpanel.hometab.folder_not_empty.text=Le dossier {0}\ndoit être vide.
+folderpanel.hometab.folder_not_empty.text=Le dossier {0}\ndoit \u00c3\u00aatre vide.
 folderpanel.hometab.local_folder_location=Emplacement du dossier local
 folderpanel.hometab.local_size=Taille locale
 folderpanel.hometab.number_of_available_files_at_other_members=Nombre de fichiers disponibles chez les membres connect\u00e9s
@@ -315,7 +318,7 @@ folderpanel.hometab.number_of_deleted_files_in_folder=Nombre de fichiers effac\u
 folderpanel.hometab.number_of_local_files_in_folder=Nombre de fichiers locaux dans le dossier
 folderpanel.hometab.public_folder=Public
 folderpanel.hometab.secret_folder=Priv\u00e9
-folderpanel.hometab.sub_folder_move.text=Le dossier {0}\nne peut pas être d\u00e9plac\u00e9 dans le sous-dossier\n{1}.
+folderpanel.hometab.sub_folder_move.text=Le dossier {0}\nne peut pas \u00c3\u00aatre d\u00e9plac\u00e9 dans le sous-dossier\n{1}.
 folderpanel.hometab.synchronisation_eta=Synchronisation ETA
 folderpanel.hometab.synchronisation_percentage=Pourcentage de synchronisation
 folderpanel.hometab.title=Accueil
@@ -587,6 +590,7 @@ preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folde
 preferences.dialog.dialogs.check_for_program_updates=V\u00e9rifier la mise \u00e0 jour de PowerFolder
 preferences.dialog.dialogs.title=Message
 preferences.dialog.dialogs.warnoncloseifnotinsync=Pr\u00e9venir \u00e0 la fermeture du programme si un dossier est en cours de synchronisation
+##preferences.dialog.dialogs.warnondownloadtransferproblems=Warn on download transfer problems
 preferences.dialog.dialogs.warnonlimitedconnectivity=Pr\u00e9venir en cas de connexion limit\u00e9e (Pas de connexion entrante)
 preferences.dialog.dialogs.warnonpossiblefilenameproblems=Pr\u00e9venir en cas de probl\u00e8me de nom de fichier  (ex. trop long pour un autre OS)
 preferences.dialog.dyndns=DNS dynamique (dyndns)
@@ -641,7 +645,7 @@ preferences.dialog.showpreviewpanel=Active la pr\u00e9visualisation de l'image
 preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>Vous pouvez trouver la pr\u00e9visualisation de l'image dans Mes Dossiers->Dossier->Fichiers->Details<BR>(Cette fonction est consommatrice de m\u00e9moire avec des images sup\u00e9rieures \u00e0 500 Ko, \u00e0 utiliser avec pr\u00e9caution.)</BODY></HTML>
 preferences.dialog.silentthrottle=Contr\u00f4le de la bande passante 
 preferences.dialog.silentthrottle.tooltip=Passe le suivi de la bande passante en mode silencieux (fonctionne uniquement en cas de limite de bande passante diff\u00e9rente de 0)
-preferences.dialog.smalltoolbar=Utiliser la petite barre d'icônes
+preferences.dialog.smalltoolbar=Utiliser la petite barre d'ic\u00c3\u00b4nes
 preferences.dialog.startwithwindows=D\u00e9marrer PowerFolder \u00e0 l'ouverture de Windows
 preferences.dialog.statusCantResolve=L'adresse DynDns {0} ne peut pas \u00eatre r\u00e9solue\!
 preferences.dialog.statusDynDnsSuccess=L'adresse DynDns {0} est valid\u00e9e\!
@@ -664,6 +668,14 @@ previewfiles.description=Pr\u00e9visualiser les fichiers de ce dossier
 previewfiles.key=V
 previewfiles.name=Pr\u00e9-visualisation
 
+##pro.http.options.directconnect=Direct connection to the internet
+##pro.http.options.host=Hostname
+##pro.http.options.httpproxy=HTTP-Proxy
+##pro.http.options.password=Password
+##pro.http.options.port=Port
+##pro.http.options.title=HTTP Connection settings
+##pro.http.options.username=Username
+##pro.http.options.withauth=With authorization
 pro.security.autoacceptfriendkeys=Accepter automatiquement la clef publique d'un ami
 pro.security.high=Horte
 pro.security.high_info=S\u00e9curit\u00e9 forte (par d\u00e9faut)\:
@@ -716,9 +728,9 @@ quickinfo.upload.title=Etat des \u00e9missions
 quickinfo.user.isconnectedinet=Est sur Internet
 quickinfo.user.isconnectedlan=Est sur le LAN
 quickinfo.user.isdiconnected=Est d\u00e9connect\u00e9(e)
-quickinfo.user.secureconnected=Connect\u00e9(e) de façon s\u00e9curis\u00e9e
+quickinfo.user.secureconnected=Connect\u00e9(e) de fa\u00c3\u00a7on s\u00e9curis\u00e9e
 quickinfo.webservice.connected=Connect\u00e9 au WebService PowerFolder
-quickinfo.webservice.foldersmirrored={0} de {1} dossier(s) sur le point d'être r\u00e9cup\u00e9r\u00e9(s)
+quickinfo.webservice.foldersmirrored={0} de {1} dossier(s) sur le point d'\u00c3\u00aatre r\u00e9cup\u00e9r\u00e9(s)
 quickinfo.webservice.notconnected=D\u00e9connect\u00e9 du WebService PowerFolder
 quickinfo.webservice.notsetup=WebService de PowerFolder pas encore configur\u00e9
 quickinfo.webservice.title=Sauvegarde en ligne - WebService
@@ -831,142 +843,6 @@ synchronisation.warning.title=Active le profil de synchronisation {0} pour {1}
 syncprofile.autodownload_all.name=T\u00e9l\u00e9chargement automatique (tout le monde)
 syncprofile.autodownload_friends.name=T\u00e9l\u00e9chargement automatique (liste ami(e)s)
 syncprofile.backupsource.name=Sauvegarde (Source)
-syncprofile.backuptarget.name=Sauvegarde (Cible)
-syncprofile.custom.name=Personnalisation...
-syncprofile.leecher.name=T\u00e9l\u00e9chargement via un fichier Torrent
-syncprofile.leechreleaser.name=Emplacement du fichier Torrent
-syncprofile.manualdownload.name=T\u00e9l\u00e9chargement manuel
-syncprofile.projectwork.name=Synchronisation de type Projet
-syncprofile.syncpcs.name=Duplication
-
-systray.exit=Quitter
-systray.hide=Mettre en cache
-systray.powerfolder=PowerFolder v{0}
-systray.show=Afficher
-systray.syncall=Dossiers synchronis\u00e9s
-systray.tooltip.down=DOWN {0} KBs
-systray.tooltip.down.mb=Down {0} MBs
-systray.tooltip.insync=InSync
-systray.tooltip.syncing=Syncing
-systray.tooltip.up=UP {0} KBs
-systray.tooltip.up.mb=Up {0} MBs
-
-title.friends=Liste d'ami(e)s
-title.my.folders=Mes dossiers partag\u00e9s 
-title.network.statistics=Statistiques r\u00e9seau
-title.public.folder=Dossier public
-title.public.folders=Dossiers publics
-title.search.users=Rechercher un utilisateur
-
-transfers.completed=Termin\u00e9
-transfers.eta=ETA
-transfers.from=Depuis
-transfers.hashing=Brouillage
-transfers.kbs={0} KB/s
-transfers.local=local
-transfers.pending=En attente
-transfers.progress=En progres
-transfers.queued=file d'attente
-transfers.requested=demand\u00e9
-transfers.searching=Recherche...
-transfers.to=To
-
-unignorefile.description=Fichier(s) \u00e0 t\u00e9l\u00e9charger/partager \u00e0 nouveau
-unignorefile.key=R
-unignorefile.name=Retirer de 'Ignor\u00e9s'
-
-winutils.shortcut.description=Raccourci cr\u00e9\u00e9 par PowerFolder
-
-wizard.basicsetup.enternick=Merci de saisir votre login Windows
-wizard.basicsetup.lanonly=R\u00e9seau local LAN
-wizard.basicsetup.networking=Connect\u00e9(e))
-wizard.basicsetup.private=LAN et Internet
-wizard.basicsetup.title=Configuration standard
-wizard.choosedisklocation.select=S\u00e9lectionner le r\u00e9pertoire
-wizard.choosedisklocation.title=Emplacement sur le disque
-wizard.control.back=< Pr\u00e9c\u00e9dent
-wizard.control.cancel=Annuler
-wizard.control.finish=Terminer
-wizard.control.help=Aide
-wizard.control.next=Suivant >
-wizard.description=Ouverture de l'assistant
-wizard.filesharing.browse=Passer en revue les dossiers publics
-wizard.filesharing.browseinfo=Pour passer en revue les dossiers publics (gris),\nutiliser l'arborescence figurant c\u00f4t\u00e9 gauche.\nLeurs fichiers sont affich\u00e9s sur la partie droite de la fen\u00eatre
-wizard.filesharing.folderjoinsuccess=Vous \u00eates connect\u00e9s au dossier partag\u00e9
-wizard.filesharing.loadinvitation=Se connecter \u00e0 un dossier via une invitation
-wizard.filesharing.selecttarget=Merci d'indiquer votre r\u00e9pertoire de t\u00e9l\u00e9chargement
-wizard.filesharing.share=Partager/Ouvrir un nouveau dossier
-wizard.filesharing.sharedsuccess=Vous venez de partager un nouveau dossier \!\nD'autres utilisateurs peuvent maintenant s'y connecter
-wizard.filesharing.title=Partage de fichiers
-wizard.key=A
-wizard.loadinvitation.addtofriends=Ajouter {0} \u00e0 la liste d'ami(e)s
-wizard.loadinvitation.choosefile=Indiquer le fichier d'invitation
-wizard.loadinvitation.select=S\u00e9lectionner le fichier d'invitation
-wizard.loadinvitation.selectfile=Merci de s\u00e9lectionner le fichier d'invitation
-wizard.loadinvitation.title=Charger l'invitation
-wizard.name=Assistant
-wizard.pfwizard.title=Assistant
-wizard.projectname.choose=Choisir le nom du projet
-wizard.projectname.entername=Saisir le nom de votre projet
-wizard.projectname.title=Charger une invitation
-wizard.projectsync.projectsyncsuccess=Vous venez de configurer une synchronisation de type Projet\!\nD'autres membres du project peuvent maintenant vous rejoindre
-wizard.projectsync.selectdirectory=Merci de s\u00e9lectionner le r\u00e9pertoire contenant les fichiers de project
-wizard.projectsync.selectlocaldirectory=Merci de s\u00e9lectionner le r\u00e9pertoire local cible pour les fichiers de project
-wizard.projectsync.setupsync=Configurer une synchronisation de type Projet
-wizard.projectsync.successjoin=Vous venez de rejoindre le Projet\!
-wizard.projectsync.takepartsync=Prendre part \u00e0 une synchronisation de type Projet
-wizard.projectsync.title=Synchronisation de type Projet
-wizard.sendinvitations.additionaltext=Informations Compl\u00e9mentaires
-wizard.sendinvitations.joinsync=Une invitation est n\u00e9cessaire pour rejoindre une duplication.
-wizard.sendinvitations.neveruntrusted=\nNe le diffusez jamais aupr\u00e8s d'inconnu(e)s
-wizard.sendinvitations.offline=D\u00e9connect\u00e9(e))
-wizard.sendinvitations.overpf=Instantan\u00e9ment via PowerFolder
-wizard.sendinvitations.savetofile=Enregistrer comme fichier
-wizard.sendinvitations.sendbymail=Envoyer par e-mail
-wizard.sendinvitations.sendinvitation=Envoyer l'invitation
-wizard.sendinvitations.sendsuccess=Invitation envoy\u00e9e
-wizard.sendinvitations.sendsuccessinfo=Exp\u00e9dition de l'invitation r\u00e9ussie.
-wizard.sendinvitations.title=Enregistrer une invitation
-wizard.setupdns.dyndnshomepage=Page d'accueil Dyndns
-wizard.setupdns.enterdns=Indiquer votre adresse (dynamique) DNS ou cliquer sur 'Terminer'
-wizard.setupdns.improvesread=Ceci am\u00e9liore la qualit\u00e9 de votre connectivit\u00e9 aupr\u00e8s des autres. 
-wizard.setupdns.nodnssetup=Vous n'avez pas encore configur\u00e9 d'adresse (dynamique) DNS\!
-wizard.setupdns.title=Configuration facultative du (dynamic) DNS
-wizard.setupsuccess=Configuration termin\u00e9e avec succ\u00e8s
-wizard.syncpcspanel.folderjoinsuccess=Vous venez de rejoindre un dossier dupliqu\u00e9 \!\n
-wizard.syncpcspanel.foldersyncsuccess=Vous venez de configurer un dossier dupliqu\u00e9 \!\n
-wizard.syncpcspanel.pcsjoin=D'autres PCs peuvent se connecter au dossier maintenant
-wizard.syncpcspanel.select=Merci d'indiquer le r\u00e9pertoire devant être dupliqu\u00e9
-wizard.syncpcspanel.selecttarget=Merci d'indiquer le r\u00e9pertoire local cible
-wizard.syncpcspanel.setup=Configurer une nouvelle duplication
-wizard.syncpcspanel.takepart=Prendre part \u00e0 une duplication
-wizard.syncpcspanel.title=Duplication
-wizard.webservice.enteraccount=Merci d'indiquer vos informations de connexion au WebService
-wizard.webservice.learnmore=Quel est le WebService PowerFolder ?
-wizard.webservice.login=Sauvegarde en ligne
-wizard.webservice.mirrorchoosefolder=Indiquer le dossier \u00e0 sauvegarder via le WebService PowerFolder
-wizard.webservice.mirrorsetup=Sauvegarder le dossier via le WebService
-wizard.webservice.password=Mot de passe
-wizard.webservice.register=Enregistrer un nouveau compte
-wizard.webservice.username=E-mail
-wizard.whattodo.bordertext=Choisir votre action
-wizard.whattodo.filesharing=Partage de fichiers
-wizard.whattodo.openonlinedocumentation=Ouvrir la documentation en ligne
-wizard.whattodo.projectwork=Synchroniser un projet
-wizard.whattodo.syncpcs=Duplication
-wizard.whattodo.title=Que voulez-vous faire ?
-.
-
-synchronisation.notice.title=Activation du profil de synchronisation {0}
-synchronisation.warning.automatic_deletions=Ce mode synchronise les fichiers effac\u00e9s\!\nContinuer ?
-synchronisation.warning.automatic_deletions_notice=ATTENTION \: Ce mode synchronise les fichiers effac\u00e9s du dossier partag\u00e9 \n(efface donc les autres sources) \!
-synchronisation.warning.automatic_download=Ce mode automatise le t\u00e9l\u00e9chargement de fichiers\!\nContinuer ?
-synchronisation.warning.explanation=Vous avez s\u00e9lectionn\u00e9 le profil de synchronisation '{0}' pour le dossier {1}.
-synchronisation.warning.title=Active le profil de synchronisation {0} pour {1}
-
-syncprofile.autodownload_all.name=T\u00e9l\u00e9chargement automatique (tout le monde)
-syncprofile.autodownload_friends.name=T\u00e9l\u00e9chargement automatique (liste ami(e)s)
-syncprofile.backupsource.name=Sauvegarde (Source)
 syncprofile.backuptarget.name=Sauvegarder (Cible)
 syncprofile.custom.name=Personnalisation...
 syncprofile.leecher.name=T\u00e9l\u00e9chargement via un fichier Torrent
@@ -975,6 +851,12 @@ syncprofile.manualdownload.name=T\u00e9l\u00e9chargement manuel
 syncprofile.projectwork.name=Synchronisation de type Projet
 syncprofile.syncpcs.name=Duplication
 
+##systemservice.options.info1=Use these options install/uninstall
+##systemservice.options.info2=PowerFolder as system service.
+##systemservice.options.install=Install
+##systemservice.options.title=PowerFolder System Service
+##systemservice.options.uninstall=Uninstall
+
 systray.exit=Quitter
 systray.hide=Mettre en cache
 systray.powerfolder=PowerFolder v{0}
@@ -993,6 +875,22 @@ title.network.statistics=Statistiques r\u00e9seau
 title.public.folder=Dossier public
 title.public.folders=Dossiers publics
 title.search.users=Rechercher un utilisateur
+
+##transfer.problem.broken.download=The transfer download was broken for {0}
+##transfer.problem.broken.upload=\=The transfer upload was broken for {0}
+##transfer.problem.file.not.found.exception=There was a FileNotFoundException for {0}\: {1}
+##transfer.problem.general.exception=There was an Exception for {0}\: {1}
+##transfer.problem.illegal.chunk=Received illegal chunk for {0}\: {1}
+##transfer.problem.invalid.part=Received invalid part request {0}
+##transfer.problem.io.exception=Unable to read/write {0}\: {1}
+##transfer.problem.md5.error=There was an MD5-Hash error for {0}
+##transfer.problem.no.such.algorithm.exception=There was a NoSuchAlgorithmException for {0}\: {1}
+##transfer.problem.old.upload=Already received download request for {0} from {1}
+##transfer.problem.temp.file.delete=Unable to removed broken tempfile for {0} {1}
+##transfer.problem.temp.file.open=Unable to create/open tempfile for {0} {1}
+##transfer.problem.temp.file.write=Unable to write to tempfile for {0} {1}
+##transfer.problem.title=File Transfer Problem
+##transfer.problem.transfer.exception=There was a TransferException for {0}\: {1}
 
 transfers.completed=Termin\u00e9
 transfers.eta=ETA
@@ -1072,7 +970,7 @@ wizard.setupsuccess=Configuration termin\u00e9e avec succ\u00e8s
 wizard.syncpcspanel.folderjoinsuccess=Vous venez de rejoindre un dossier dupliqu\u00e9 \!\n
 wizard.syncpcspanel.foldersyncsuccess=Vous venez de configurer un dossier dupliqu\u00e9 \!\n
 wizard.syncpcspanel.pcsjoin=D'autres PCs peuvent se connecter au dossier maintenant
-wizard.syncpcspanel.select=Merci d'indiquer le r\u00e9pertoire devant être dupliqu\u00e9
+wizard.syncpcspanel.select=Merci d'indiquer le r\u00e9pertoire devant \u00c3\u00aatre dupliqu\u00e9
 wizard.syncpcspanel.selecttarget=Merci d'indiquer le r\u00e9pertoire local cible
 wizard.syncpcspanel.setup=Configurer un nouveau dossier de duplication
 wizard.syncpcspanel.takepart=Prendre part \u00e0 une duplication
@@ -1080,7 +978,7 @@ wizard.syncpcspanel.title=Duplication
 wizard.webservice.enteraccount=Merci d'indiquer votre compte pour vous connecter au WebService
 wizard.webservice.learnmore=Qu'est-ce que le WebService PowerFolder ?
 wizard.webservice.login=Identifiant de sauvegarde en ligne
-wizard.webservice.mirrorchoosefolder=Indiquer le dossier devant être r\u00e9cup\u00e9r\u00e9 par le WebService PowerFolder
+wizard.webservice.mirrorchoosefolder=Indiquer le dossier devant \u00c3\u00aatre r\u00e9cup\u00e9r\u00e9 par le WebService PowerFolder
 wizard.webservice.mirrorsetup=Sauvegarder le dossier par WebService
 wizard.webservice.password=Mot de passe
 wizard.webservice.register=Cr\u00e9er un nouveau compte
@@ -1091,4 +989,3 @@ wizard.whattodo.openonlinedocumentation=Ouvrir la documentation en ligne
 wizard.whattodo.projectwork=Synchroniser un projet
 wizard.whattodo.syncpcs=Duplication
 wizard.whattodo.title=Que voulez-vous faire ?
-
