--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -6,11 +6,13 @@
 # You just need to translate the english text behind the =
 # Then remove the ## in front of the line.
 #
+# Pro version translations start with the prefix 'pro.'
+#
 # There is also a guide on our offical webpage under
 # http://www.powerfolder.com/node/i18n
 #
 # When you are completed please send your translation file to
-# contact@powerfolder.com
+# translation@powerfolder.com
 #
 # Thank you,
 # Your PowerFolder Team
@@ -56,9 +58,9 @@ about.dialog_contributers_tab=team
 about.key=h
 about.name=Hj\u00e4lp
 
-##aboutwebservice.description=Opens the WebService of the webservice in default browser
+##aboutwebservice.description=Opens the Online Storage in default browser
 ##aboutwebservice.key=A
-##aboutwebservice.name=About WebService
+##aboutwebservice.name=About Online Storage
 
 addfriend.description=L\u00e4gg till anv\u00e4ndaren i listan med v\u00e4nner
 addfriend.key=L
@@ -77,6 +79,7 @@ addressEditor.title=IP-Omr\u00e5de
 
 ##chat.notification.option1=Answer
 ##chat.notification.option2=Close
+##chat.notification.subtitle=<html><center><b>PowerFolder</b></center>You received a new chat message</html>
 
 chatpanel.cannot_deliver=meddelande kan ej levereras eftersom '{0}' inte \u00e4r ansluten
 chatpanel.chat_with=Chatta med
@@ -471,7 +474,7 @@ member.non_mutual_friend=Ingen gemensam v\u00e4n
 member.onlan=P\u00e5 LAN
 member.supernode=Supernode
 
-##mirrorfolder.description=Setup the WebService to backup a folder
+##mirrorfolder.description=Setup the Online Storage to backup a folder
 ##mirrorfolder.key=B
 ##mirrorfolder.name=Backup Folder
 
@@ -534,8 +537,8 @@ onepublicfolderpanel.unable_to_connect_to_a_source=Kan inte ansluta till k\u00e4
 
 onlinelabel.connecting=Ansluter
 onlinelabel.connecting.text=Du \u00e4r online, men ansluten till v\u00e4ldigt f\u00e5 anv\u00e4ndare. V\u00e4nta en liten stund f\u00f6r att bli fullt ansluten. Om det inte g\u00e5r, l\u00e4s FAQ @ http\://www.powerfolder.com
-##onlinelabel.disabled=Disabled (Extensive use detected)
-##onlinelabel.disabled.text=PowerFolder is currently disabled because extensive use was detected.
+##onlinelabel.disabled=Disabled
+##onlinelabel.disabled.text=PowerFolder is currently disabled.
 onlinelabel.offline=Offline
 onlinelabel.offline.text=Du \u00e4r offline. Inte ansluten till n\u00e5gon annan anv\u00e4ndare i PowerFolder-n\u00e4tverket
 onlinelabel.online=Online
@@ -553,7 +556,7 @@ openfile.description=\u00d6ppna (K\u00f6r) den valda filen
 openfile.key=K
 openfile.name=\u00d6ppna/K\u00f6r fil
 
-##openwebservice.description=Opens the WebService in the default browser
+##openwebservice.description=Opens the Online Storage in the default browser
 ##openwebservice.key=B
 ##openwebservice.name=Open in Browser
 
@@ -587,6 +590,7 @@ preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folde
 preferences.dialog.dialogs.check_for_program_updates=S\u00f6k efter PowerFolder program uppdateringar
 preferences.dialog.dialogs.title=Dialoger
 preferences.dialog.dialogs.warnoncloseifnotinsync=Varna vid st\u00e4ngning av programmet om en forder fortfarande h\u00e5ller p\u00e5 att synkroniseras
+##preferences.dialog.dialogs.warnondownloadtransferproblems=Warn on download transfer problems
 preferences.dialog.dialogs.warnonlimitedconnectivity=Varna vid begr\u00e4nsad anslutning (Inga inkommande anslutningar)
 preferences.dialog.dialogs.warnonpossiblefilenameproblems=Varna vid risk f\u00f6r filnamnsproblem (t.ex. f\u00f6r l\u00e5ng f\u00f6r Apple classic)
 preferences.dialog.dyndns=Min (dynamiska) DNS
@@ -652,7 +656,7 @@ preferences.dialog.titleProcessing=Arbetar...
 ##preferences.dialog.userecyclebin=Use recycle bin (default)
 preferences.dialog.useziponlan=Anv\u00e4nd ZIP komprimering p\u00e5 LAN 
 preferences.dialog.useziponlan.tooltip=Aktivera om filerna som skall skickas \u00e4r enkla att komprimera (detta kan p\u00e5verka din CPU belastning)
-##preferences.dialog.verbose=Enable verbose logging
+##preferences.dialog.verbose=Enable debug logging
 preferences.dialog.warnningMessage=Varning
 preferences.dialog.xbehavior=\u00c5tg\u00e4rd vid avslut
 preferences.dialog.xbehavior.exit=Avsluta programmet
@@ -664,6 +668,14 @@ previewfiles.description=F\u00f6rhandsgranska filerna i denna folder
 previewfiles.key=F
 previewfiles.name=F\u00f6rhandsgranska
 
+##pro.http.options.directconnect=Direct connection to the internet
+##pro.http.options.host=Hostname
+##pro.http.options.httpproxy=HTTP-Proxy
+##pro.http.options.password=Password
+##pro.http.options.port=Port
+##pro.http.options.title=HTTP Connection settings
+##pro.http.options.username=Username
+##pro.http.options.withauth=With authorization
 pro.security.autoacceptfriendkeys=Acceptera f\u00f6rsta offentliga nyckeln fr\u00e5n en v\u00e4n automatiskt
 pro.security.high=H\u00f6g
 pro.security.high_info=H\u00f6g s\u00e4kerhet (standard)\:
@@ -717,11 +729,11 @@ quickinfo.user.isconnectedinet=\u00c4r p\u00e5 Internet
 quickinfo.user.isconnectedlan=\u00c4r p\u00e5 LAN
 quickinfo.user.isdiconnected=\u00c4r ej ansluten
 quickinfo.user.secureconnected=s\u00e4kert ansluten
-##quickinfo.webservice.connected=Connected to the PowerFolder WebService
+##quickinfo.webservice.connected=Connected to the PowerFolder Online Storage
 ##quickinfo.webservice.foldersmirrored={0} of {1} Folder(s) get backed up
-##quickinfo.webservice.notconnected=Disconnected from PowerFolder WebService
-##quickinfo.webservice.notsetup=PowerFolder WebService not configured yet
-##quickinfo.webservice.title=Online Storage - WebService
+##quickinfo.webservice.notconnected=Disconnected from PowerFolder Online Storage
+##quickinfo.webservice.notsetup=Online Storage not configured yet
+##quickinfo.webservice.title=PowerFolder Online Storage
 
 reconnect.description=\u00c5teransluter till denna anv\u00e4ndare nu
 reconnect.key=\u00c5
@@ -839,6 +851,12 @@ syncprofile.manualdownload.name=Manuell
 syncprofile.projectwork.name=Projektarbete
 ##syncprofile.syncpcs.name=Mirror
 
+##systemservice.options.info1=Use these options install/uninstall
+##systemservice.options.info2=PowerFolder as system service.
+##systemservice.options.install=Install
+##systemservice.options.title=PowerFolder System Service
+##systemservice.options.uninstall=Uninstall
+
 systray.exit=Avsluta
 systray.hide=G\u00f6m
 systray.powerfolder=PowerFolder v{0}
@@ -857,6 +875,22 @@ title.network.statistics=N\u00e4tverk statistik
 title.public.folder=Offentlig folder
 title.public.folders=Offentliga Foldrar
 title.search.users=Hitta v\u00e4nner
+
+##transfer.problem.broken.download=The transfer download was broken for {0}
+##transfer.problem.broken.upload=\=The transfer upload was broken for {0}
+##transfer.problem.file.not.found.exception=There was a FileNotFoundException for {0}\: {1}
+##transfer.problem.general.exception=There was an Exception for {0}\: {1}
+##transfer.problem.illegal.chunk=Received illegal chunk for {0}\: {1}
+##transfer.problem.invalid.part=Received invalid part request {0}
+##transfer.problem.io.exception=Unable to read/write {0}\: {1}
+##transfer.problem.md5.error=There was an MD5-Hash error for {0}
+##transfer.problem.no.such.algorithm.exception=There was a NoSuchAlgorithmException for {0}\: {1}
+##transfer.problem.old.upload=Already received download request for {0} from {1}
+##transfer.problem.temp.file.delete=Unable to removed broken tempfile for {0} {1}
+##transfer.problem.temp.file.open=Unable to create/open tempfile for {0} {1}
+##transfer.problem.temp.file.write=Unable to write to tempfile for {0} {1}
+##transfer.problem.title=File Transfer Problem
+##transfer.problem.transfer.exception=There was a TransferException for {0}\: {1}
 
 transfers.completed=klar
 transfers.eta=Klar om
@@ -941,11 +975,11 @@ wizard.syncpcspanel.selecttarget=Var v\u00e4nlig ange lokal m\u00e5l-mapp
 ##wizard.syncpcspanel.setup=Setup a new mirror
 ##wizard.syncpcspanel.takepart=Take part in a mirror
 ##wizard.syncpcspanel.title=Mirror
-##wizard.webservice.enteraccount=Please enter your account data to login to the WebService
+##wizard.webservice.enteraccount=Please enter your account data to login to the Online Storage
 ##wizard.webservice.learnmore=What is the PowerFolder WebService?
 ##wizard.webservice.login=Online Storage Login
-##wizard.webservice.mirrorchoosefolder=Choose a folder to be backed up by the PowerFolder WebService
-##wizard.webservice.mirrorsetup=Backup Folder by WebService
+##wizard.webservice.mirrorchoosefolder=Choose a folder to be backed up by the PowerFolder Online Storage
+##wizard.webservice.mirrorsetup=Backup Folder by Online Storage
 ##wizard.webservice.password=Password
 ##wizard.webservice.register=Register new Account
 ##wizard.webservice.username=Email
