--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -6,11 +6,13 @@
 # You just need to translate the english text behind the =
 # Then remove the ## in front of the line.
 #
+# Pro version translations start with the prefix 'pro.'
+#
 # There is also a guide on our offical webpage under
 # http://www.powerfolder.com/node/i18n
 #
 # When you are completed please send your translation file to
-# contact@powerfolder.com
+# translation@powerfolder.com
 #
 # Thank you,
 # Your PowerFolder Team
@@ -77,6 +79,7 @@ buypro.name=Pro \u3092\u8cfc\u5165(B)
 
 chat.notification.option1=\u5fdc\u7b54
 chat.notification.option2=\u9589\u3058\u308b
+##chat.notification.subtitle=<html><center><b>PowerFolder</b></center>You received a new chat message</html>
 
 chatpanel.cannot_deliver='{0}' \u3068\u63a5\u7d9a\u3055\u308c\u3066\u3044\u306a\u3044\u305f\u3081\u3001\u30e1\u30c3\u30bb\u30fc\u30b8\u9001\u9054\u4e0d\u53ef
 chatpanel.chat_with=\u30c1\u30e3\u30c3\u30c8\u76f8\u624b\: 
@@ -587,6 +590,7 @@ preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folde
 preferences.dialog.dialogs.check_for_program_updates=PowerFolder \u672c\u4f53\u30d7\u30ed\u30b0\u30e9\u30e0\u306e\u66f4\u65b0\u3092\u30c1\u30a7\u30c3\u30af
 preferences.dialog.dialogs.title=\u30dd\u30c3\u30d7\u30a2\u30c3\u30d7
 preferences.dialog.dialogs.warnoncloseifnotinsync=\u30d7\u30ed\u30b0\u30e9\u30e0\u3092\u9589\u3058\u308b\u969b\u30d5\u30a9\u30eb\u30c0\u304c\u540c\u671f\u4e2d\u306e\u3068\u304d\u306f\u8b66\u544a
+##preferences.dialog.dialogs.warnondownloadtransferproblems=Warn on download transfer problems
 preferences.dialog.dialogs.warnonlimitedconnectivity=\u63a5\u7d9a\u304c\u5236\u9650\u3055\u308c\u3066\u3044\u308b\u3068\u304d\u306f\u8b66\u544a\uff08\u53d7\u4fe1\u65b9\u5411\u306e\u63a5\u7d9a\u304c\u906e\u65ad\u72b6\u614b\uff09
 preferences.dialog.dialogs.warnonpossiblefilenameproblems=\u30d5\u30a1\u30a4\u30eb\u540d\u306b\u554f\u984c\u306e\u6050\u308c\u304c\u3042\u308b\u3068\u304d\u306f\u8b66\u544a\uff08\u4f8b Apple classic \u306b\u306f\u9577\u3059\u304e\u308b\u540d\u524d\uff09
 preferences.dialog.dyndns=\u81ea\u5206\u306e\uff08\u52d5\u7684\uff09DNS
@@ -664,6 +668,14 @@ previewfiles.description=\u3053\u306e\u30d5\u30a9\u30eb\u30c0\u5185\u306e\u30d5\
 previewfiles.key=P
 previewfiles.name=\u30d7\u30ec\u30d3\u30e5\u30fc(P)
 
+##pro.http.options.directconnect=Direct connection to the internet
+##pro.http.options.host=Hostname
+##pro.http.options.httpproxy=HTTP-Proxy
+##pro.http.options.password=Password
+##pro.http.options.port=Port
+##pro.http.options.title=HTTP Connection settings
+##pro.http.options.username=Username
+##pro.http.options.withauth=With authorization
 pro.security.autoacceptfriendkeys=\u53cb\u4eba\u304b\u3089\u306e\u6700\u521d\u306e\u516c\u958b\u30ad\u30fc\u3092\u81ea\u52d5\u7684\u306b\u53d7\u3051\u5165\u308c\u308b
 pro.security.high=\u9ad8
 pro.security.high_info=\u9ad8\u30bb\u30ad\u30e5\u30ea\u30c6\u30a3\uff08\u65e2\u5b9a\uff09\:
@@ -839,6 +851,12 @@ syncprofile.manualdownload.name=\u624b\u52d5\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9
 syncprofile.projectwork.name=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30ef\u30fc\u30af
 syncprofile.syncpcs.name=\u30df\u30e9\u30fc
 
+##systemservice.options.info1=Use these options install/uninstall
+##systemservice.options.info2=PowerFolder as system service.
+##systemservice.options.install=Install
+##systemservice.options.title=PowerFolder System Service
+##systemservice.options.uninstall=Uninstall
+
 systray.exit=\u7d42\u4e86
 systray.hide=\u96a0\u3059
 systray.powerfolder=PowerFolder v{0}
@@ -857,6 +875,22 @@ title.network.statistics=\u30cd\u30c3\u30c8\u30ef\u30fc\u30af\u306e\u7d71\u8a08
 title.public.folder=\u30d1\u30d6\u30ea\u30c3\u30af \u30d5\u30a9\u30eb\u30c0
 title.public.folders=\u30d1\u30d6\u30ea\u30c3\u30af \u30d5\u30a9\u30eb\u30c0
 title.search.users=\u30e6\u30fc\u30b6\u30fc\u691c\u7d22
+
+##transfer.problem.broken.download=The transfer download was broken for {0}
+##transfer.problem.broken.upload=\=The transfer upload was broken for {0}
+##transfer.problem.file.not.found.exception=There was a FileNotFoundException for {0}\: {1}
+##transfer.problem.general.exception=There was an Exception for {0}\: {1}
+##transfer.problem.illegal.chunk=Received illegal chunk for {0}\: {1}
+##transfer.problem.invalid.part=Received invalid part request {0}
+##transfer.problem.io.exception=Unable to read/write {0}\: {1}
+##transfer.problem.md5.error=There was an MD5-Hash error for {0}
+##transfer.problem.no.such.algorithm.exception=There was a NoSuchAlgorithmException for {0}\: {1}
+##transfer.problem.old.upload=Already received download request for {0} from {1}
+##transfer.problem.temp.file.delete=Unable to removed broken tempfile for {0} {1}
+##transfer.problem.temp.file.open=Unable to create/open tempfile for {0} {1}
+##transfer.problem.temp.file.write=Unable to write to tempfile for {0} {1}
+##transfer.problem.title=File Transfer Problem
+##transfer.problem.transfer.exception=There was a TransferException for {0}\: {1}
 
 transfers.completed=\u5b8c\u4e86
 transfers.eta=\u63a8\u5b9a\u6240\u8981\u6642\u9593
