--- a/src/etc/Translation_ru.properties
+++ b/src/etc/Translation_ru.properties
@@ -6,11 +6,13 @@
 # You just need to translate the english text behind the =
 # Then remove the ## in front of the line.
 #
+# Pro version translations start with the prefix 'pro.'
+#
 # There is also a guide on our offical webpage under
 # http://www.powerfolder.com/node/i18n
 #
 # When you are completed please send your translation file to
-# contact@powerfolder.com
+# translation@powerfolder.com
 #
 # Thank you,
 # Your PowerFolder Team
@@ -77,6 +79,7 @@ buypro.name=\u041a\u0443\u043f\u0438\u0442\u044c Pro \u0432\u0435\u0440\u0441\u0
 
 chat.notification.option1=\u041e\u0442\u0432\u0435\u0442\u0438\u0442\u044c
 chat.notification.option2=\u0417\u0430\u043a\u0440\u044b\u0442\u044c
+##chat.notification.subtitle=<html><center><b>PowerFolder</b></center>You received a new chat message</html>
 
 chatpanel.cannot_deliver=\u0421\u043e\u043e\u0431\u0449\u0435\u043d\u0438\u0435 \u043d\u0435 \u043e\u0442\u043e\u0441\u043b\u0430\u043d\u043e, \u0442.\u043a. '{0}' \u043d\u0435 \u0432 \u0441\u0435\u0442\u0438\!
 chatpanel.chat_with=\u0427\u0430\u0442 \u0441
@@ -105,7 +108,7 @@ delete_confimation.busy.description=\u0423\u0434\u0430\u043b\u0435\u043d\u0438\u
 delete_confimation.busy.title=\u0423\u0434\u0430\u043b\u0435\u043d\u0438\u0435 \u0444\u0430\u0439\u043b\u043e\u0432
 delete_confimation.text=\u0412\u044b \u0443\u0432\u0435\u0440\u0435\u043d\u044b \u0447\u0442\u043e \u0436\u0435\u043b\u0430\u0435\u0442\u0435 \u0443\u0434\u0430\u043b\u0438\u0442\u044c \u0444\u0430\u0439\u043b(\u044b)\:\n (\u0423\u0447\u0442\u0438\u0442\u0435, \u044d\u0442\u0438 \u0444\u0430\u0439\u043b\u044b \u0431\u0443\u0434\u0443\u0442 \u0431\u0435\u0437\u0432\u043e\u0437\u0432\u0440\u0430\u0442\u043d\u043e \u0443\u0434\u0430\u043b\u0435\u043d\u044b \u0441 \u0441\u0438\u0441\u0442\u0435\u043c\u044b, \u0430 \u043d\u0435 \u043f\u0435\u0440\u0435\u0434\u0432\u0438\u043d\u0443\u0442\u044b \u0432 "\u041a\u043e\u0440\u0437\u0438\u043d\u0443").
 delete_confimation.text_delete=\u0412\u044b \u0443\u0432\u0435\u0440\u0435\u043d\u044b \u0447\u0442\u043e \u0436\u0435\u043b\u0430\u0435\u0442\u0435 \u043d\u0430\u0432\u0441\u0435\u0433\u0434\u0430 \u0443\u0434\u0430\u043b\u0438\u0442\u044c \u0441\u043b\u0435\u0434\u0443\u044e\u0449\u0438\u0439(\u0435) \u0444\u0430\u0439\u043b(\u044b)?
-delete_confimation.text_delete_directory=\u0412\u044b \u0443\u0432\u0435\u0440\u0435\u043d\u044b \u0447\u0442\u043e \u0436\u0435\u043b\u0430\u0435\u0442\u0435 \u043d\u0430\u0432\u0441\u0435\u0433\u0434\u0430 \u0443\u0434\u0430\u043b\u0438\u0442\u044c \u0441\u043b\u0435\u0434\u0443\u044e\u0449\u0438\u0439(\u0435) \u0444\u0430\u0439\u043b(\u044b) \u0438\o\u0438\u043b\u0438 \u043f\u0430\u043f\u043a\u0438 (\u0432\u043a\u043b\u044e\u0447\u0430\u044f \u0444\u0430\u0439\u043b\u044b \u0438 \u043f\u043e\u0434\u043f\u0430\u043f\u043a\u0438)?
+delete_confimation.text_delete_directory=\u0412\u044b \u0443\u0432\u0435\u0440\u0435\u043d\u044b \u0447\u0442\u043e \u0436\u0435\u043b\u0430\u0435\u0442\u0435 \u043d\u0430\u0432\u0441\u0435\u0433\u0434\u0430 \u0443\u0434\u0430\u043b\u0438\u0442\u044c \u0441\u043b\u0435\u0434\u0443\u044e\u0449\u0438\u0439(\u0435) \u0444\u0430\u0439\u043b(\u044b) \u0438o\u0438\u043b\u0438 \u043f\u0430\u043f\u043a\u0438 (\u0432\u043a\u043b\u044e\u0447\u0430\u044f \u0444\u0430\u0439\u043b\u044b \u0438 \u043f\u043e\u0434\u043f\u0430\u043f\u043a\u0438)?
 delete_confimation.text_movetorecyclebin=\u0412\u044b \u0443\u0432\u0435\u0440\u0435\u043d\u044b \u0447\u0442\u043e \u0436\u0435\u043b\u0430\u0435\u0442\u0435 \u043f\u0435\u0440\u0435\u0434\u0432\u0438\u043d\u0443\u0442\u044c \u044d\u0442\u0438 \u0444\u0430\u0439\u043b\u044b \u0432 \u043a\u043e\u0440\u0437\u0438\u043d\u0443 PowerFolder-\u0430?
 delete_confimation.text_movetorecyclebin_DIR=<\u041f\u0430\u043f\u043a\u0430>
 delete_confimation.text_movetorecyclebin_directory=\u0412\u044b \u0443\u0432\u0435\u0440\u0435\u043d\u044b \u0447\u0442\u043e \u0436\u0435\u043b\u0430\u0435\u0442\u0435 \u043f\u0435\u0440\u0435\u0434\u0432\u0438\u043d\u0443\u0442\u044c \u044d\u0442\u0438 \u0444\u0430\u0439\u043b\u044b \u0438\n\u0438\u043b\u0438 \u043f\u0430\u043f\u043a\u0438 \u0432 \u043a\u043e\u0440\u0437\u0438\u043d\u0443 PowerFolder-\u0430?
@@ -587,6 +590,7 @@ preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folde
 preferences.dialog.dialogs.check_for_program_updates=\u041f\u0440\u043e\u0432\u0435\u0440\u0438\u0442\u044c \u043e\u0431\u043d\u043e\u0432\u043b\u0435\u043d\u0438\u044f \u0434\u043b\u044f PowerFolder
 preferences.dialog.dialogs.title=\u0414\u0438\u0430\u043b\u043e\u0433\u0438
 preferences.dialog.dialogs.warnoncloseifnotinsync=\u041f\u0440\u0435\u0434\u0443\u043f\u0440\u0435\u0436\u0434\u0430\u0442\u044c \u0435\u0441\u043b\u0438 \u043a\u0430\u043a\u0430\u044f \u043b\u0438\u0431\u043e \u041f\u0430\u043f\u043a\u0430 \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0438\u0440\u0443\u0435\u0442\u0441\u044f \u0432\u043e \u0432\u0440\u0435\u043c\u044f \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043d\u0438\u044f \u043f\u0440\u043e\u0433\u0440\u0430\u043c\u043c\u044b.
+##preferences.dialog.dialogs.warnondownloadtransferproblems=Warn on download transfer problems
 preferences.dialog.dialogs.warnonlimitedconnectivity=\u041f\u0440\u0435\u0434\u0443\u043f\u0440\u0435\u0436\u0434\u0430\u0442\u044c \u043f\u0440\u0438 \u043e\u0433\u0440\u0430\u043d\u0438\u0447\u0435\u043d\u043e\u0439 \u0441\u0432\u044f\u0437\u044b (\u043e\u0442\u0441\u0443\u0442\u0441\u0442\u0432\u0438\u0435 \u0432\u0445\u043e\u0434\u044f\u0449\u0438\u0445 \u0441\u043e\u0435\u0434\u0438\u043d\u0435\u043d\u0438\u0439)
 preferences.dialog.dialogs.warnonpossiblefilenameproblems=\u041f\u0440\u0435\u0434\u0443\u043f\u0440\u0435\u0436\u0434\u0430\u0442\u044c \u043e \u0432\u043e\u0437\u043c\u043e\u0436\u043d\u044b\u0445 \u043f\u0440\u043e\u0431\u043b\u0435\u043c\u0430\u0445 \u0441 \u043d\u0430\u0437\u0432\u0430\u043d\u0438\u044f\u043c\u0438 \u0444\u0430\u0439\u043b\u043e\u0432 (\u043d\u0430\u043f\u0440\u0438\u043c\u0435\u0440 \u0440\u0430\u0437\u043c\u0435\u0440 \u0434\u043b\u044f Apple classic)
 preferences.dialog.dyndns=\u0414\u0438\u043d\u0430\u043c\u0438\u0447\u0435\u0441\u043a\u043e\u0435 \u0438\u043c\u044f \u0445\u043e\u0441\u0442\u0430
@@ -664,6 +668,14 @@ previewfiles.description=\u041f\u0440\u0435\u0434\u043f\u0440\u043e\u0441\u043c\
 previewfiles.key=P
 previewfiles.name=\u041f\u0440\u0435\u0434\u043f\u0440\u043e\u0441\u043c\u043e\u0442\u0440
 
+##pro.http.options.directconnect=Direct connection to the internet
+##pro.http.options.host=Hostname
+##pro.http.options.httpproxy=HTTP-Proxy
+##pro.http.options.password=Password
+##pro.http.options.port=Port
+##pro.http.options.title=HTTP Connection settings
+##pro.http.options.username=Username
+##pro.http.options.withauth=With authorization
 pro.security.autoacceptfriendkeys=\u0410\u0432\u0442\u043e\u043c\u0430\u0442\u0438\u0447\u0435\u0441\u043a\u0438 \u043f\u0440\u0438\u043d\u0438\u043c\u0430\u0442\u044c \u043f\u0435\u0440\u0432\u044b\u0435 \u043e\u0431\u0449\u0438\u0435 \u043a\u043b\u044e\u0447\u0438 \u043e\u0442 \u0434\u0440\u0443\u0437\u0435\u0439
 pro.security.high=\u0412\u044b\u0441\u043e\u043a\u0438\u0439
 pro.security.high_info=\u041f\u043e\u0432\u044b\u0448\u0435\u043d\u043d\u0430\u044f \u0431\u0435\u0437\u043e\u043f\u0430\u0441\u043d\u043e\u0441\u0442\u044c (\u043f\u043e \u0443\u043c\u043e\u043b\u0447\u0430\u043d\u0438\u044e)\:
@@ -839,6 +851,12 @@ syncprofile.manualdownload.name=\u0420\u0443\u0447\u043d\u043e\u0435 \u0441\u043
 syncprofile.projectwork.name=\u041f\u0440\u043e\u0435\u043a\u0442
 syncprofile.syncpcs.name=\u0417\u0435\u0440\u043a\u0430\u043b\u043e
 
+##systemservice.options.info1=Use these options install/uninstall
+##systemservice.options.info2=PowerFolder as system service.
+##systemservice.options.install=Install
+##systemservice.options.title=PowerFolder System Service
+##systemservice.options.uninstall=Uninstall
+
 systray.exit=\u0417\u0430\u0432\u0435\u0440\u0448\u0438\u0442\u044c
 systray.hide=\u0421\u043a\u0440\u044b\u0442\u044c
 systray.powerfolder=PowerFolder v{0}
@@ -857,6 +875,22 @@ title.network.statistics=\u0421\u0442\u0430\u0442\u0438\u0441\u0442\u0438\u043a\
 title.public.folder=\u0414\u043e\u0441\u0442\u0443\u043f\u043d\u0430\u044f \u041f\u0430\u043f\u043a\u0430
 title.public.folders=\u0414\u043e\u0441\u0442\u0443\u043f\u043d\u044b\u0435 \u041f\u0430\u043f\u043a\u0438
 title.search.users=\u041f\u043e\u0438\u0441\u043a \u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u0435\u0439
+
+##transfer.problem.broken.download=The transfer download was broken for {0}
+##transfer.problem.broken.upload=\=The transfer upload was broken for {0}
+##transfer.problem.file.not.found.exception=There was a FileNotFoundException for {0}\: {1}
+##transfer.problem.general.exception=There was an Exception for {0}\: {1}
+##transfer.problem.illegal.chunk=Received illegal chunk for {0}\: {1}
+##transfer.problem.invalid.part=Received invalid part request {0}
+##transfer.problem.io.exception=Unable to read/write {0}\: {1}
+##transfer.problem.md5.error=There was an MD5-Hash error for {0}
+##transfer.problem.no.such.algorithm.exception=There was a NoSuchAlgorithmException for {0}\: {1}
+##transfer.problem.old.upload=Already received download request for {0} from {1}
+##transfer.problem.temp.file.delete=Unable to removed broken tempfile for {0} {1}
+##transfer.problem.temp.file.open=Unable to create/open tempfile for {0} {1}
+##transfer.problem.temp.file.write=Unable to write to tempfile for {0} {1}
+##transfer.problem.title=File Transfer Problem
+##transfer.problem.transfer.exception=There was a TransferException for {0}\: {1}
 
 transfers.completed=\u0433\u043e\u0442\u043e\u0432\u043e
 transfers.eta=ETA
