--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -6,11 +6,13 @@
 # You just need to translate the english text behind the =
 # Then remove the ## in front of the line.
 #
+# Pro version translations start with the prefix 'pro.'
+#
 # There is also a guide on our offical webpage under
 # http://www.powerfolder.com/node/i18n
 #
 # When you are completed please send your translation file to
-# contact@powerfolder.com
+# translation@powerfolder.com
 #
 # Thank you,
 # Your PowerFolder Team
@@ -77,6 +79,7 @@ buypro.name=\u8d2d\u4e70\u4e13\u4e1a\u7248
 
 chat.notification.option1=\u56de\u7b54
 chat.notification.option2=\u5173\u95ed
+##chat.notification.subtitle=<html><center><b>PowerFolder</b></center>You received a new chat message</html>
 
 chatpanel.cannot_deliver=\u56e0\u4e3a\u4e0d\u80fd\u8fde\u63a5'{0}'\uff0c\u6d88\u606f\u4e0d\u80fd\u4f20\u9012
 chatpanel.chat_with=\u804a\u5929
@@ -587,6 +590,7 @@ preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folde
 preferences.dialog.dialogs.check_for_program_updates=\u68c0\u67e5PowerFolder\u7a0b\u5e8f\u5347\u7ea7\u3002
 preferences.dialog.dialogs.title=\u5bf9\u8bdd\u6846
 preferences.dialog.dialogs.warnoncloseifnotinsync=\u540c\u6b65\u65f6\u5173\u95ed\u7a0b\u5e8f\u63d0\u793a
+##preferences.dialog.dialogs.warnondownloadtransferproblems=Warn on download transfer problems
 preferences.dialog.dialogs.warnonlimitedconnectivity=\u8fde\u63a5\u53d7\u9650\u65f6\u63d0\u793a(\u6ca1\u6709\u6536\u5230\u7684\u8fde\u63a5)
 preferences.dialog.dialogs.warnonpossiblefilenameproblems=\u5728\u6587\u4ef6\u540d\u53ef\u80fd\u51fa\u9519\u65f6\u63d0\u793a(\u5982\u592a\u957f\u7684\u6587\u4ef6\u540d)
 preferences.dialog.dyndns=\u52a8\u6001DNS
@@ -664,6 +668,14 @@ previewfiles.description=\u5728\u6587\u4ef6\u5939\u4e2d\u9884\u89c8\u6587\u4ef6
 previewfiles.key=P
 previewfiles.name=\u9884\u89c8
 
+##pro.http.options.directconnect=Direct connection to the internet
+##pro.http.options.host=Hostname
+##pro.http.options.httpproxy=HTTP-Proxy
+##pro.http.options.password=Password
+##pro.http.options.port=Port
+##pro.http.options.title=HTTP Connection settings
+##pro.http.options.username=Username
+##pro.http.options.withauth=With authorization
 pro.security.autoacceptfriendkeys=\u81ea\u52a8\u63a5\u53d7\u9996\u4e2a\u6765\u81ea\u597d\u53cb\u7684\u516c\u94a5
 pro.security.high=\u9ad8
 pro.security.high_info=\u9ad8\u5b89\u5168\u7ea7(\u9ed8\u8ba4)\:
@@ -839,6 +851,12 @@ syncprofile.manualdownload.name=\u624b\u52a8\u4e0b\u8f7d
 syncprofile.projectwork.name=\u540c\u6b65\u9879\u76ee
 syncprofile.syncpcs.name=\u955c\u50cf
 
+##systemservice.options.info1=Use these options install/uninstall
+##systemservice.options.info2=PowerFolder as system service.
+##systemservice.options.install=Install
+##systemservice.options.title=PowerFolder System Service
+##systemservice.options.uninstall=Uninstall
+
 systray.exit=\u9000\u51fa
 systray.hide=\u9690\u85cf
 systray.powerfolder=PowerFolder v{0}
@@ -857,6 +875,22 @@ title.network.statistics=\u7f51\u7edc\u7edf\u8ba1
 title.public.folder=\u516c\u5171\u6587\u4ef6\u5939
 title.public.folders=\u516c\u5171\u6587\u4ef6\u5939
 title.search.users=\u67e5\u627e\u7528\u6237
+
+##transfer.problem.broken.download=The transfer download was broken for {0}
+##transfer.problem.broken.upload=\=The transfer upload was broken for {0}
+##transfer.problem.file.not.found.exception=There was a FileNotFoundException for {0}\: {1}
+##transfer.problem.general.exception=There was an Exception for {0}\: {1}
+##transfer.problem.illegal.chunk=Received illegal chunk for {0}\: {1}
+##transfer.problem.invalid.part=Received invalid part request {0}
+##transfer.problem.io.exception=Unable to read/write {0}\: {1}
+##transfer.problem.md5.error=There was an MD5-Hash error for {0}
+##transfer.problem.no.such.algorithm.exception=There was a NoSuchAlgorithmException for {0}\: {1}
+##transfer.problem.old.upload=Already received download request for {0} from {1}
+##transfer.problem.temp.file.delete=Unable to removed broken tempfile for {0} {1}
+##transfer.problem.temp.file.open=Unable to create/open tempfile for {0} {1}
+##transfer.problem.temp.file.write=Unable to write to tempfile for {0} {1}
+##transfer.problem.title=File Transfer Problem
+##transfer.problem.transfer.exception=There was a TransferException for {0}\: {1}
 
 transfers.completed=\u5b8c\u6210
 transfers.eta=ETA
